--- a/Capstone.Web/Web.config
+++ b/Capstone.Web/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="LocalConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=StockGame;Integrated Security=True" />
+  </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
