--- a/Capstone.Web/packages.config
+++ b/Capstone.Web/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net452" />
