--- a/StockGameService/StockGameService.csproj
+++ b/StockGameService/StockGameService.csproj
@@ -44,9 +44,12 @@
   <ItemGroup>
     <Compile Include="DAL\IStockGameDAL.cs" />
     <Compile Include="DAL\StockGameDAL.cs" />
+    <Compile Include="Helpers\PasswordHelper.cs" />
+    <Compile Include="Helpers\RoleManager.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\RoleItem.cs" />
     <Compile Include="Models\Stock.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
