--- a/StockGameService/StockGameService.csproj
+++ b/StockGameService/StockGameService.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DAL\IStockGameDAL.cs" />
     <Compile Include="DAL\StockGameDAL.cs" />
+    <Compile Include="Models\AvailableStocks.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Stock.cs" />
     <Compile Include="Models\User.cs" />
