--- a/StockGameService/StockGameService.csproj
+++ b/StockGameService/StockGameService.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DAL\IStockGameDAL.cs" />
     <Compile Include="DAL\StockGameDAL.cs" />
+    <Compile Include="Mock\MockStockGameDal.cs" />
     <Compile Include="Models\AvailableStocks.cs" />
     <Compile Include="Helpers\PasswordHelper.cs" />
     <Compile Include="Helpers\RoleManager.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Models\RoleItem.cs" />
     <Compile Include="Models\Stock.cs" />
     <Compile Include="Models\UserItem.cs" />
+    <Compile Include="Models\UserStockItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
