--- a/StockGameService/StockGameService.csproj
+++ b/StockGameService/StockGameService.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Models\ReadyUsers.cs" />
     <Compile Include="Models\RoleItem.cs" />
     <Compile Include="Models\Stock.cs" />
+    <Compile Include="Models\UserHoldings.cs" />
     <Compile Include="Models\UserItem.cs" />
     <Compile Include="Models\UserStockItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
