--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -110,6 +110,13 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\ArrowBlack.png" />
+    <Content Include="Content\Images\ArrowBlue.png" />
+    <Content Include="Content\Images\ArrowGreen.png" />
+    <Content Include="Content\Images\ArrowGrey.png" />
+    <Content Include="Content\Images\ArrowLightBlue.png" />
+    <Content Include="Content\Images\ArrowRed.png" />
+    <Content Include="Content\Images\ArrowWhite.png" />
     <Content Include="Content\StockGame\About.css" />
     <Content Include="Content\StockGame\Game.css" />
     <Content Include="Content\StockGame\Landing.css" />
