--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -115,8 +115,10 @@
     <Content Include="Content\Images\ArrowGreen.png" />
     <Content Include="Content\Images\ArrowGrey.png" />
     <Content Include="Content\Images\ArrowLightBlue.png" />
+    <Content Include="Content\Images\ArrowPlzwork.png" />
     <Content Include="Content\Images\ArrowRed.png" />
     <Content Include="Content\Images\ArrowWhite.png" />
+    <Content Include="Content\Images\SexyArrow.png" />
     <Content Include="Content\StockGame\About.css" />
     <Content Include="Content\StockGame\Game.css" />
     <Content Include="Content\StockGame\Landing.css" />
