--- a/Capstone.Web/Web.config
+++ b/Capstone.Web/Web.config
@@ -11,6 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;User Id=SMGUser;Password=hello" />
     <add name="LocalConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=StockGame;Integrated Security=True" />
   </connectionStrings>
   <!--
