--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -118,6 +118,7 @@
     <Content Include="Content\Images\ArrowPlzwork.png" />
     <Content Include="Content\Images\ArrowRed.png" />
     <Content Include="Content\Images\ArrowWhite.png" />
+    <Content Include="Content\Images\money.jpg" />
     <Content Include="Content\Images\SexyArrow.png" />
     <Content Include="Content\StockGame\About.css" />
     <Content Include="Content\StockGame\Game.css" />
