--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -170,6 +170,7 @@
     <Content Include="Scripts\popper.min.js" />
     <Content Include="Scripts\StockGame\About.js" />
     <Content Include="Scripts\StockGame\Game.js" />
+    <Content Include="Scripts\StockGame\GameModal.js" />
     <Content Include="Scripts\StockGame\Global.js" />
     <Content Include="Scripts\StockGame\Landing.js" />
     <Content Include="Scripts\StockGame\Login.js" />
