--- a/StockGameService/StockGameService.csproj
+++ b/StockGameService/StockGameService.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Helpers\PasswordHelper.cs" />
     <Compile Include="Helpers\RoleManager.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\OwnerOfStock.cs" />
     <Compile Include="Models\ReadyUsers.cs" />
     <Compile Include="Models\RoleItem.cs" />
     <Compile Include="Models\Stock.cs" />
